Infra/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
   app: grafana
  name: grafana
  namespace: grafana
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 3000
  selector:
    app: grafana
