Infra/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations: 
   kubernetes.io/ingress.class: kong
spec:
  rules:
   - host: api.jebsen.com
     http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 8080
